--- a/agendamento.css
+++ b/agendamento.css
@@ -69,11 +69,11 @@ h1{
 
 td {
 
-    height: 25px;
+    height: 50px;
 
     width: 30px;
 
-    background: #f5f5f5;
+    background: #adadad;
 
     font: 12px verdana;							  
 
@@ -85,15 +85,15 @@ td {
 
         font: bold 12px verdana;
 
-        background: #f5f5f5;
+        background: #ffdf6d ;
 
         text-align: center;
 
-        line-height: 25px;							
+        line-height: 35px;							
 
-        height: 25px;
+        height: 60px;
 
-        width: 240px;
+        width: 500px;
 
 
 }
