--- a/agendamento.css
+++ b/agendamento.css
@@ -1,11 +1,14 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+nav #bt-mobile-menu {
+display: none;
 }
 
 #ima{
-  background-image: linear-gradient(#fff,#ffc600);
+background-image: linear-gradient(#fff,#ffc600);
 }
 
 nav div{
@@ -15,56 +18,84 @@ justify-content: space-between;
 }
 
 .junto{
-  flex-direction: row;
-  align-items: center;
-  
+flex-direction: row;
+align-items: center;
+
 }
 
 nav p{
-  justify-content: flex-end;
-  font-family: 'Limelight', cursive;
-  font-size: 1.5em;
-  padding: 0em 0px 0px 9px;
+justify-content: flex-end;
+font-family: 'Limelight', cursive;
+font-size: 1.5em;
+padding: 0em 0px 0px 9px;
 
 }
 
 img:first-child{
-  width: 8%;
-  padding: 0.2em;
+width: 8%;
+padding: 0.2em;
 }
 
 .junto img:first-child{
 width: 40%;
-padding: 0em 0px 0px 0px;
+padding: 0;
 }
 
+.junto > a{
+  color: black;
+  padding: 0.2em;
+}
 
 ul{
-  background-color: #ffc600;
-  width: 100%;
-  height: 50%;
-  
+background-color: #ffc600;
+width: 100%;
+height: 50%;
+
+}
+
+nav ul > li > a{
+  text-decoration: none;
+  padding: 0% 5% 0% 5%;
+  color: black;
 }
 
   nav ul > li{
 
-  width: 100%;
-  text-align: center;
-  }
-  
+width: 100%;
+text-align: center;
+
+}
+
 NAV ul{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;  
-  font-size: 1.5em;
-  font-family: 'Limelight', cursive;
-  align-items: flex-end;
-  justify-content: space-between;
-  list-style-type: none;
-      }
+display: flex;
+flex-direction: row;
+flex-wrap: nowrap;  
+font-size: 1.5em;
+font-family: 'Limelight', cursive;
+align-items: flex-end;
+justify-content: space-between;
+list-style-type: none;
+
+    }
+
+nav ul > li > a:hover{
+background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
+
+}  
+
+.all{
+  border: solid #ffc600;
+  background-color: #f7da72;
+}
 
 h1{
-    text-align: center;
+  text-align: center;
+  background-color: #f7da72;
+  padding: 2% 0% 2% 0%;
+  font-size: 1.5em;
+  font-family: 'Limelight', cursive;
+  color: brown;
 }
 
 td {
@@ -128,9 +159,11 @@ td {
 
         position:absolute;
 
-        right: -2px;
+        right: 4-px;
 
-        top: -2px;					  
+        top: -2px;		
+        
+       
 
 }
 
@@ -147,7 +180,7 @@ td {
         flex-direction: row;
         flex-wrap: nowrap;
         justify-content: space-around;
-        margin-left: 14%
+       
        }
     
     .tex{
@@ -166,9 +199,79 @@ td {
     text-align: center;
 }
 
+
       #rodapé {
         background-image: linear-gradient(#ffc600,#fff);
         height: 10em;
         padding: 1.5%;
         
+      }
+      @media (max-width: 900px) {
+        #tudo img{
+          width: 50%;
+        }
+      }
+      @media (max-width:600px){
+        nav #bt-mobile-menu {
+          display: block;
+      
+      }
+      
+      nav #bt-mobile-menu {
+        display: block;
+      }
+      
+      nav .bt-common-menu {
+        display: none;
+      }
+      
+      nav .bt-common-menu.active {
+        display: block;
+      }
+      
+      nav ul.mobile-mode {
+        display: flex;
+        flex-direction: column;
+      }
+      
+      
+      }
+      @media (max-width:600px){
+        .pacotes {
+          margin-left: 10%;
+          margin-right: 5%;
+          margin-top: 9%;
+          margin-bottom: 9%;
+          display: block; 
+      }
+      @media (max-width:600px){
+        .tex {
+          margin-bottom: 20%;
+          padding: 5% 35px 5% 85px;
+          }
+         
+         
+      }
+
+      @media (max-width: 600px) {
+        img:first-child{
+          width: 19%;
+          }
+      
+      }
+      
+      @media (max-width: 600px) {
+        .junto img:first-child{
+            width: 100%;
+            padding: 0% 3% 0% 5%;
+            margin-right: 3%;
+          }
+      
+      }
+      
+      @media (max-width: 600px) {
+        .junto{
+          margin-left: 9em;
+          }
+      
       }
