--- a/ambiente.css
+++ b/ambiente.css
@@ -1,11 +1,14 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+nav #bt-mobile-menu {
+display: none;
 }
 
 #ima{
-  background-image: linear-gradient(#fff,#ffc600);
+background-image: linear-gradient(#fff,#ffc600);
 }
 
 nav div{
@@ -15,58 +18,71 @@ justify-content: space-between;
 }
 
 .junto{
-  flex-direction: row;
-  align-items: center;
-  
+flex-direction: row;
+align-items: center;
+
 }
 
 nav p{
-  justify-content: flex-end;
-  font-family: 'Limelight', cursive;
-  font-size: 1.5em;
-  padding: 0em 0px 0px 9px;
+justify-content: flex-end;
+font-family: 'Limelight', cursive;
+font-size: 1.5em;
+padding: 0em 0px 0px 9px;
 
-}
-
-.menu {
-  border-top: 1px solid #000;
-  border-bottom: 1px solid #000;
 }
 
 img:first-child{
-  width: 8%;
-  padding: 0.2em;
+width: 8%;
+padding: 0.2em;
 }
 
 .junto img:first-child{
 width: 40%;
-padding: 0em 0px 0px 0px;
+padding: 0;
 }
 
+.junto > a{
+  color: black;
+  padding: 0.2em;
+}
 
 ul{
-  background-color: #ffc600;
-  width: 100%;
-  height: 50%;
-  
+background-color: #ffc600;
+width: 100%;
+height: 50%;
+
+}
+
+nav ul > li > a{
+  text-decoration: none;
+  padding: 0% 5% 0% 5%;
+  color: black;
 }
 
   nav ul > li{
 
-  width: 100%;
-  text-align: center;
-  }
-  
-nav ul{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;  
-  font-size: 1.5em;
-  font-family: 'Limelight', cursive;
-  align-items: flex-end;
-  justify-content: space-between;
-  list-style-type: none;
+width: 100%;
+text-align: center;
+
 }
+
+NAV ul{
+display: flex;
+flex-direction: row;
+flex-wrap: nowrap;  
+font-size: 1.5em;
+font-family: 'Limelight', cursive;
+align-items: flex-end;
+justify-content: space-between;
+list-style-type: none;
+
+    }
+
+nav ul > li > a:hover{
+background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
+
+}  
 
   h1{
     text-align: center;
@@ -175,3 +191,65 @@ nav ul{
     padding: 1.5%;
   }
   
+
+  @media (max-width: 900px) {
+    #tudo img{
+      width: 50%;
+    }
+  }
+  @media (max-width:600px){
+    nav #bt-mobile-menu {
+      display: block;
+  
+  }
+  
+  nav #bt-mobile-menu {
+    display: block;
+  }
+  
+  nav .bt-common-menu {
+    display: none;
+  }
+  
+  nav .bt-common-menu.active {
+    display: block;
+  }
+  
+  nav ul.mobile-mode {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  
+  }
+  @media (max-width: 600px) {
+    img:first-child{
+      width: 19%;
+      }
+  
+  }
+  
+  @media (max-width: 600px) {
+    .junto img:first-child{
+        width: 100%;
+        padding: 0% 3% 0% 5%;
+        margin-right: 3%;
+      }
+  
+  }
+  
+  @media (max-width: 600px) {
+    .junto{
+      margin-left: 9em;
+      }
+  
+  }
+  @media (max-width: 600px) {
+    .mySlides img{
+      align-content: center;
+      align-self: center;
+      padding: 0em 0px 0px 60px;
+      
+    }
+  
+  }
