--- a/pagamentos.css
+++ b/pagamentos.css
@@ -1,71 +1,88 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+nav #bt-mobile-menu {
+display: none;
 }
 
 #ima{
-    background-image: linear-gradient(#fff,#ffc600);
-  }
+background-image: linear-gradient(#fff,#ffc600);
+}
 
 nav div{
-  display: flex;  
-  justify-content: space-between; 
-  
+display: flex;  
+justify-content: space-between; 
+
 }
 
 .junto{
-    flex-direction: row;
-    align-items: center;
-    
-  }
-  
-nav p{
-    justify-content: flex-end;
-    font-family: 'Limelight', cursive;
-    font-size: 1.5em;
-    padding: 0em 0px 0px 9px;
-  
-  }
+flex-direction: row;
+align-items: center;
 
-img:first-child{
-    width: 8%;
-    padding: 0.2em;
-  }
-
- .junto img:first-child{
-  width: 40%;
-  padding: 0em 0px 0px 0px;
-  }
-  
-
-ul{
-    background-color: #ffc600;
-    width: 100%;
-    height: 50%;
-    
 }
 
-    nav ul > li{
+nav p{
+justify-content: flex-end;
+font-family: 'Limelight', cursive;
+font-size: 1.5em;
+padding: 0em 0px 0px 9px;
 
-    width: 100%;
-    text-align: center;
-    }
-    
+}
+
+img:first-child{
+width: 8%;
+padding: 0.2em;
+}
+
+.junto img:first-child{
+width: 40%;
+padding: 0;
+}
+
+.junto > a{
+  color: black;
+  padding: 0.2em;
+}
+
+ul{
+background-color: #ffc600;
+width: 100%;
+height: 50%;
+
+}
+
+nav ul > li > a{
+  text-decoration: none;
+  padding: 0% 5% 0% 5%;
+  color: black;
+}
+
+  nav ul > li{
+
+width: 100%;
+text-align: center;
+
+}
+
 NAV ul{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;  
-    font-size: 1.5em;
-    font-family: 'Limelight', cursive;
-    align-items: flex-end;
-    justify-content: space-between;
-    list-style-type: none;
-        }
+display: flex;
+flex-direction: row;
+flex-wrap: nowrap;  
+font-size: 1.5em;
+font-family: 'Limelight', cursive;
+align-items: flex-end;
+justify-content: space-between;
+list-style-type: none;
 
-    hr{
-        background-color: black;
     }
+
+nav ul > li > a:hover{
+background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
+
+}  
 
 .all{
     border: solid #ffc600;
@@ -93,6 +110,10 @@ h1{
     text-align: center;
 }
 
+#ban img{
+  width: 3%;
+}
+
 .enviar{
     display: flex;
     flex-direction: row;
@@ -112,4 +133,56 @@ h1{
         background-image: linear-gradient(#ffc600,#fff);
         height: 30%;
         padding: 1.5%;
+      }
+      @media (max-width: 900px) {
+        #tudo img{
+          width: 50%;
+        }
+      }
+      @media (max-width:600px){
+        nav #bt-mobile-menu {
+          display: block;
+      
+      }
+      
+      nav #bt-mobile-menu {
+        display: block;
+      }
+      
+      nav .bt-common-menu {
+        display: none;
+      }
+      
+      nav .bt-common-menu.active {
+        display: block;
+      }
+      
+      nav ul.mobile-mode {
+        display: flex;
+        flex-direction: column;
+      }
+      
+      
+      }
+      @media (max-width: 600px) {
+        img:first-child{
+          width: 19%;
+          }
+      
+      }
+      
+      @media (max-width: 600px) {
+        .junto img:first-child{
+            width: 100%;
+            padding: 0% 3% 0% 5%;
+            margin-right: 3%;
+          }
+      
+      }
+      
+      @media (max-width: 600px) {
+        .junto{
+          margin-left: 9em;
+          }
+      
       }
